#16 creates age checking function and passes in boolean to verify view using handlebars

--- a/views/verified.html
+++ b/views/verified.html
@@ -1,7 +1,7 @@
-<h1>You are under 18</h1>
+{{#if isUnder18}}
+  <p>Under 18! </p>
+{{/if}}
 
-<p>D.O.B: {{profile.dateOfBirth}}</p>
-
-<p>user id: {{userId}}</p>
-
-{{outcome}}
+<p>
+   OVER 18
+</p>
