#11 adds childline font to our font stack and impements it on index.html view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,5 @@
+@font-face { font-family: childline; src: url('./fonts/childline-font/ChildlineWeb-Regular'); }
+
 .button {
   position: absolute;
   top: 50%;
@@ -7,4 +9,5 @@
 
 .title {
   text-align: center;
+  font-family: 'childline';
 }
