--- a/views/index.html
+++ b/views/index.html
@@ -5,7 +5,8 @@
   class="btn button yoti-connect learn-more btn-primary"
   data-target='embed'
   data-yoti-application-id='3392788e-e529-4309-8ed7-54d7ac554055'
-  data-yoti-type="popout"
+  data-yoti-scenario-id="5be10ae7-af29-40b0-8d33-a0fb90cb0e88"
+  data-yoti-type="inline"
   data-size="medium">
   Sign up with Yoti
 </a>
