--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,3 +8,10 @@
 .title {
   text-align: center;
 }
+
+/* Pallet RGB */
+$color1: rgba(0, 161, 208, 1);
+$color2: rgba(87, 87, 255, 1);
+$color3: rgba(35, 79, 98, 1);
+$color4: rgba(115, 207, 232, 1);
+$color5: rgba(235, 88, 87, 1);
