--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
     <title>Homepage</title>
-    <link rel="stylesheet" href="main.css">
+    <meta charset="utf-8">
+    <link rel="stylesheet" href="css/main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- required for yoti button -->
     <script src="https://sdk.yoti.com/clients/browser.js"></script>
