--- a/views/age-check.html
+++ b/views/age-check.html
@@ -1,5 +1,5 @@
 
-<h1 class='title'>Welcome</h1>
+<h1 class='title'>Please prove you are 17 or younger</h1></h1>
 <!-- yoti button -->
 <a
   class="btn button yoti-connect learn-more btn-primary"
@@ -8,9 +8,13 @@
   data-yoti-scenario-id="5be10ae7-af29-40b0-8d33-a0fb90cb0e88"
   data-yoti-type="inline"
   data-size="medium">
-  Sign up with Yoti
+  Prove age with Yoti
 </a>
-
+<a
+class="btn button yoti-connect learn-more btn-primary" href='https://itunes.apple.com/us/app/yoti/id983980808?ls=1&mt=8'
+data-size="medium">
+Create Yoti Identity
+</a>
 <!-- required for yoti button -->
 <script>
     _ybg.config.service = 'https://code.yoti.com/app/'
