--- a/views/age-check.html
+++ b/views/age-check.html
@@ -10,10 +10,8 @@
   data-size="medium">
   Prove age with Yoti
 </a>
-<a
-class="btn button yoti-connect learn-more btn-primary" href='https://itunes.apple.com/us/app/yoti/id983980808?ls=1&mt=8'
-data-size="medium">
-Create Yoti Identity
+<a class="waves-effect waves-light btn">
+  Create Yoti Identity
 </a>
 <!-- required for yoti button -->
 <script>
