--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -4,6 +4,7 @@
     <title>Homepage</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
+    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- required for yoti button -->
     <script src="https://sdk.yoti.com/clients/browser.js"></script>
