#26 QR is generated inline and to targetted div

--- a/views/age-check.html
+++ b/views/age-check.html
@@ -1,6 +1,11 @@
 
 <h1 class='title'>Please prove you are 17 or younger</h1></h1>
 <!-- yoti button -->
+
+<div id='qrcodecontainer'>
+
+</div>
+
 <a
   class="btn button yoti-connect learn-more btn-primary"
   data-target='embed'
