--- a/views/content-form.html
+++ b/views/content-form.html
@@ -2,8 +2,9 @@
   <p>Under 18!</p>
 
   <a class="waves-effect waves-light btn" href='/url-form.html'>Confirm</a>
-{{/if}}
 
-<p>
-   OVER 18
-</p>
+{{else}}
+  <p>
+     OVER 18
+  </p>
+{{/if}}
