--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -7,7 +7,7 @@
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- required for yoti button -->
-    <script src="https://sdk.yoti.com/clients/browser.js"></script>
+    <script src="js/browser.js"></script>
   </head>
   <body>
     {{{content}}}
