--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,4 +1,6 @@
-@font-face { font-family: childline; src: url('./fonts/childline-font/ChildlineWeb-Regular'); }
+@font-face { font-family: childline; src: url('../fonts/childline/Childline/ChildlineWeb/ChildlineWeb-Regular.otf'); }
+@font-face { font-family: childline-bold; src: url('../fonts/childline/Childline/ChildlineWeb/ChildlineWeb-Bold.otf'); }
+@font-face { font-family: Rosie; src: url('../fonts/childline/Rosie/Rosie-Regular.otf'); }
 
 .button {
   position: absolute;
@@ -7,8 +9,7 @@
   transform: translate(-50%, -50%);
 }
 
-.title {
-  text-align: center;
+body {
   font-family: 'childline';
 }
 
@@ -20,3 +21,78 @@ $color4: rgba(115, 207, 232, 1);
 $color5: rgba(235, 88, 87, 1);
 $color6: #f28c00;
 $color7: #632c7a;
+
+/* landing-page */
+
+.landing-title {
+
+}
+.landing-title__phone {
+  color: white;
+  font-size: 1rem;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+
+}
+
+.landing-title h1 {
+  font-size: 3rem;
+  text-align: center;
+  background-color: rgba(0, 161, 208, 1);
+  color: #fff;
+  font-family: 'childline-bold';
+  margin: 0;
+  padding: 4rem 1rem 2.5rem 1rem;
+}
+
+/*.landing-title h3 {
+  background-color: rgba(0, 161, 208, 1);
+  font-size: 1.5rem;
+  margin: 0;
+  font-family: 'Rosie';
+  color: white;
+}*/
+
+
+.landing-info {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+}
+
+.landing-info p {
+  padding: 1rem;
+  margin: 0;
+  color: #fff;
+  background-color: rgba(35, 79, 98, 1);
+}
+
+.landing-sexting {
+  width:100%;
+  z-index: -1;
+  opacity: 0.7;
+}
+
+.landing-logo {
+  position: relative;
+  top: -10rem;
+  float: left;
+  min-width: 50%;
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.landing-logo__img {
+  height: 6rem;
+}
+
+.landing-btn {
+  position: fixed;
+  width: 10rem;
+  bottom: 1.5%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #632c7a;
+}
