#28 form page in progress

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,27 +1,36 @@
+
 .content {
-  max-width: 90%;
-  background-color: orange;
-  margin: 1rem auto;
+/*  max-width: 90%;*/
+  background-color: rgba(115, 207, 232, 1);
+  /*margin: 1rem auto;*/
+  padding-bottom: 1.5rem;
 }
 
 .title-div > h2{
   margin:0;
 }
 .title-div{
-  background-color: purple;
-  padding: 1rem;
+  background-color: #632c7a;
+  color:white;
+  text-align: center;
+  padding: 2rem 1rem;
 }
 
 .form-container{
+  max-width: 90%;
+  margin: 0 auto;
   padding: 1rem;
-  background-color: yellow;
   padding:0.75em;
+  background-color: white;
   margin-bottom: 1.5rem;
   margin-top: 1.5rem;
 }
 
 .other-options{
-  background-color: blue;
+  max-width: 90%;
+  margin:0 auto;
+  background-color: rgba(35, 79, 98, 1);
+  color:white;
   padding:0.75rem;
   font-size: 1.5rem;
 }
@@ -36,6 +45,7 @@ label{
   display: inline-block!important;
   white-space: normal;
   word-wrap: break-word !important;
+  color: black !important;
 }
 
 p{
