--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -4,6 +4,7 @@
     <title>Homepage</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="../../css/form.css" media="screen" title="no title">
     <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- required for yoti button -->
