--- a/views/age-check.html
+++ b/views/age-check.html
@@ -1,23 +1,29 @@
+<!-- <div class='age'> -->
+  <div class="age-title">
+    <h1 class='title'>Please prove you are 17 or younger</h1>
+  </div>
 
-<h1 class='title'>Please prove you are 17 or younger</h1></h1>
-<!-- yoti button -->
+  <div class='qr-container' id='qrcodecontainer'>
 
-<div id='qrcodecontainer'>
+  </div>
 
-</div>
+  <span class='yoti-btn'>
+    <a
+      class="btn yoti-connect learn-more btn-primary"
+      data-target='embed'
+      data-yoti-application-id='3392788e-e529-4309-8ed7-54d7ac554055'
+      data-yoti-scenario-id="5be10ae7-af29-40b0-8d33-a0fb90cb0e88"
+      data-yoti-type="inline"
+      data-size="medium">
+      Prove age with Yoti
+    </a>
+  </span>
 
-<a
-  class="btn button yoti-connect learn-more btn-primary"
-  data-target='embed'
-  data-yoti-application-id='3392788e-e529-4309-8ed7-54d7ac554055'
-  data-yoti-scenario-id="5be10ae7-af29-40b0-8d33-a0fb90cb0e88"
-  data-yoti-type="inline"
-  data-size="medium">
-  Prove age with Yoti
-</a>
-<a class="waves-effect waves-light btn">
-  Create Yoti Identity
-</a>
+  <a class="waves-effect waves-light btn">
+    Create Yoti Identity
+  </a>
+<!-- </div> -->
+
 <!-- required for yoti button -->
 <script>
     _ybg.config.service = 'https://code.yoti.com/app/'
