--- a/views/content-form.html
+++ b/views/content-form.html
@@ -25,7 +25,7 @@
         <input type="checkbox" class="filled-in" id="filled-in-box-5" />
         <label for="filled-in-box-5">Sexual activity that includes animals.</label>
       </p>
-      <a class="waves-effect waves-light btn" href='/url-form.html'>Confirm</a>
+      <a class="purp waves-effect waves-light btn" href='/url-form.html'>Confirm</a>
     </form>
 
   </div>
