41 adds responsive css to landign elements and progress bar

--- a/views/age-check.html
+++ b/views/age-check.html
@@ -1,20 +1,24 @@
 <!-- <div class='age'> -->
   <div class="age-title">
-    <h1 class='title'>Please prove you are 17 or younger</h1>
+    <h1 class='title'>ARE YOU 17 OR YOUNGER?</h1>
   </div>
 
-  <div class='get-yoti-btn'>
+  <div class="progress">
+     <div class="determinate" style="width: 33%"></div>
+  </div>
+
+  <div class='age-info'>
     <i class="age-page small material-icons">info_outline</i>
-    <p class='link'>
+    <a class='link' href='https://www.iwf.org.uk/what-we-do' target="_blank">
       Why do I need to prove my age?
-    </p>
+    </a>
   </div>
 
-  <div class='get-yoti-btn'>
+  <div class='age-info'>
     <i class="age-page small material-icons">info_outline</i>
-    <p class='link'>
+    <a class='link' href='https://www.childline.org.uk/info-advice/bullying-abuse-safety/online-mobile-safety/sexting/' target="_blank">
       What can I do if I am over 17?
-    </p>
+    </a>
   </div>
 
     <div class='yoti-info'>
@@ -40,7 +44,7 @@
       data-yoti-scenario-id="5be10ae7-af29-40b0-8d33-a0fb90cb0e88"
       data-yoti-type="inline"
       data-size="medium">
-      Prove Age
+      Share your age using Yoti
     </a>
   </span>
 
