--- a/views/content-form.html
+++ b/views/content-form.html
@@ -3,6 +3,11 @@
   <div class="title-div">
     <h2>Describe the image content</h2>
   </div>
+  
+  <div class="progress">
+     <div class="determinate" style="width: 66%"></div>
+  </div>
+
   <div class="form-container">
     <form action="#">
       <p>
