--- a/public/css/form.css
+++ b/public/css/form.css
@@ -32,7 +32,7 @@
   background-color: rgba(35, 79, 98, 1);
   color:white;
   padding:0.75rem;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   display: flex;
   align-items: center;
 }
@@ -45,6 +45,7 @@
 }
 
 .info-message{
+  padding-left: 1rem;
   max-width: 70%;
   display: inline-block;
   float:right;
