41 adds responsive classes to age.html

--- a/views/age-check.html
+++ b/views/age-check.html
@@ -7,30 +7,32 @@
      <div class="determinate" style="width: 33%"></div>
   </div>
 
-  <div class='age-info'>
-    <i class="age-page small material-icons">info_outline</i>
-    <a class='link' href='https://www.iwf.org.uk/what-we-do' target="_blank">
-      Why do I need to prove my age?
-    </a>
-  </div>
-
-  <div class='age-info'>
-    <i class="age-page small material-icons">info_outline</i>
-    <a class='link' href='https://www.childline.org.uk/info-advice/bullying-abuse-safety/online-mobile-safety/sexting/' target="_blank">
-      What can I do if I am over 17?
-    </a>
-  </div>
-
-    <div class='yoti-info'>
-      <div id='yoti-info__content'>
-        <h3>YOTI - CONFIDENTIALLY VERIFY YOUR AGE</h3>
-        <i class="identity small material-icons">perm_identity</i>
-        <p>
-          Yoti empowers you to take back control over your identity. If you don't have a Yoti digital identity, please create <a class='link' href='yoti'>here</a> one and use it to verify you are under 17.
-        </p>
-      </div>
-
+  <div class='age-responsive'>
+    <div class='age-info'>
+      <i class="age-page small material-icons">info_outline</i>
+      <a class='link' href='https://www.iwf.org.uk/what-we-do' target="_blank">
+        Why do I need to prove my age?
+      </a>
     </div>
+
+    <div class='age-info'>
+      <i class="age-page small material-icons">info_outline</i>
+      <a class='link' href='https://www.childline.org.uk/info-advice/bullying-abuse-safety/online-mobile-safety/sexting/' target="_blank">
+        What can I do if I am over 17?
+      </a>
+    </div>
+  </div>
+
+  <div class='yoti-info'>
+    <div id='yoti-info__content'>
+      <h3>YOTI - CONFIDENTIALLY VERIFY YOUR AGE</h3>
+      <i class="identity small material-icons">perm_identity</i>
+      <p>
+        Yoti empowers you to take back control over your identity. If you don't have a Yoti digital identity, please create one <a class='link' href='yoti'>here</a> and use it to verify you are under 17.
+      </p>
+    </div>
+
+  </div>
 
 
   <div class='qr-container' id='qrcodecontainer'>
@@ -47,7 +49,6 @@
       Share your age using Yoti
     </a>
   </span>
-
 
 <!-- </div> -->
 
