--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 600px) {
+@media (min-width: 680px) {
   .landing-info {
     max-width: 500px;
     margin: 1rem auto;
@@ -10,5 +10,21 @@
   }
   .landing-logo {
     width: 200px;
+  }
+  .age-responsive {
+    width: 50%;
+    float: left;
+  }
+  .yoti-info {
+    width: 50%;
+    float: left;
+    margin: 0;
+  }
+  .yoti-btn {
+    float: left;
+    width: 50%;
+    position: relative;
+    top: -3rem;
+
   }
 }
