--- a/public/css/form.css
+++ b/public/css/form.css
@@ -1,3 +1,5 @@
+@font-face { font-family: Rosie; src: url('../fonts/childline/Rosie/rosie-regular-webfont.woff2'); }
+@font-face { font-family: childline-bold; src: url('../fonts/childline/Childline/ChildlineWeb/ChildlineWeb-Bold.otf'); }
 
 .content {
 /*  max-width: 90%;*/
@@ -105,4 +107,52 @@ p{
 
 #description{
   min-height: 6rem;
+}
+
+
+/*OLD styling*/
+
+.background-pink {
+  background-color: #fbdedd;
+  padding: 1rem;
+}
+.old-title {
+  font-family: 'Rosie';
+  color:white;
+}
+
+.old-title-p {
+  color: white;
+  font-size: 1.3rem;
+}
+
+.old-info {
+  background-color: white;
+  margin: 1rem;
+  box-sizing: border-box;
+  padding: 1rem;
+  color: #fff;
+}
+
+.old-info h3 {
+  font-family: 'childline-bold';
+  font-size: 1.6rem;
+  margin: 0;
+  width: 90%;
+  float:left;
+  color: #ED5753
+}
+
+.old-info p {
+  padding-top: 1.2rem;
+  margin: 0;
+  margin-bottom: 1rem;
+  font-size: 1.2rem;
+  color: #ED5753;
+}
+
+.identity {
+  width: 10%;
+  text-align: right;
+  color: #ED5753;
 }
