--- a/views/age-check.html
+++ b/views/age-check.html
@@ -26,7 +26,7 @@
   <div class='yoti-info'>
     <div id='yoti-info__content'>
       <h3>YOTI - CONFIDENTIALLY VERIFY YOUR AGE</h3>
-      <i class="identity small material-icons">perm_identity</i>
+      <i class="identity-1 small material-icons">perm_identity</i>
       <p>
         Yoti empowers you to take back control over your identity. If you don't have a Yoti digital identity, please create one <a class='link' href='yoti'>here</a> and use it to verify you are under 17.
       </p>
