--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -16,15 +16,14 @@
     float: left;
   }
   .yoti-info {
-    width: 50%;
+    width: 48%;
     float: left;
-    margin: 0;
+    margin: 0 auto;
   }
   .yoti-btn {
     float: left;
     width: 50%;
     position: relative;
     top: -3rem;
-
   }
 }
