--- a/views/url_form.html
+++ b/views/url_form.html
@@ -10,6 +10,7 @@ If you have multiple webpages (URLs) to report, please include these in the desc
     </p>
   </div>
   <div class="form-container">
+    <h2>Website details</h2>
     <form action="#">
       <div class="input-field col s6">
         <i class="material-icons prefix">mode_edit</i>
