--- a/views/age-check.html
+++ b/views/age-check.html
@@ -1,6 +1,6 @@
 <!-- <div class='age'> -->
   <div class="age-title">
-    <h1 class='title'>ARE YOU 17 OR YOUNGER?</h1>
+    <h1 class='title'>ARE YOU UNDER 18</h1>
   </div>
 
   <div class="progress">
@@ -8,16 +8,19 @@
   </div>
 
   <div class='age-responsive'>
-    <div class='age-info'>
-      <i class="age-page small material-icons">info_outline</i>
-      <a class='link' href='https://www.iwf.org.uk/what-we-do' target="_blank">
-        Why do I need to prove my age?
-      </a>
+    <div class='age-info background-blue'>
+      <p class='why-eighteen'>
+         To remove explicit online content we need to confirm that you are under 18.
+        <a class='link text-blue' href='https://www.iwf.org.uk/what-we-do' target="_blank">
+           Find out why here
+           <i class="tiny material-icons">info_outline</i>
+        </a>
+      </p>
     </div>
 
     <div class='age-info'>
       <i class="age-page small material-icons">info_outline</i>
-      <a class='link' href='https://www.childline.org.uk/info-advice/bullying-abuse-safety/online-mobile-safety/sexting/' target="_blank">
+      <a class='link text-white' href='https://www.childline.org.uk/info-advice/bullying-abuse-safety/online-mobile-safety/sexting/' target="_blank">
         What can I do if I am over 17?
       </a>
     </div>
