--- a/views/content-form.html
+++ b/views/content-form.html
@@ -1,7 +1,7 @@
 {{#if isUnder18}}
 <div class="content">
   <div class="title-div">
-    <h2>Describe the image content</h2>
+    <h1 class='title'>DESCRIBE THE ONLINE CONTENT</h1>
   </div>
 
   <div class="progress">
