--- a/views/layout/layout.html
+++ b/views/layout/layout.html
@@ -10,6 +10,7 @@
     <script src="js/browser.js"></script>
     <link rel="stylesheet" href="css/age.css">
     <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
   </head>
   <body>
