#45 changes colour on form pages

--- a/public/css/form.css
+++ b/public/css/form.css
@@ -12,7 +12,7 @@
 }
 
 .title-div{
-  background-color: #ED5753;
+  background-color: #632c7a;
   color:white;
   font-family: 'childline-bold';
   text-align: center;
