--- a/views/content-form.html
+++ b/views/content-form.html
@@ -1,6 +1,6 @@
 {{#if isUnder18}}
 <div class="content">
-  <div class="title-div">
+  <div class="content-title">
     <h1 class='title'>DESCRIBE THE ONLINE CONTENT</h1>
   </div>
 
@@ -55,7 +55,7 @@
 
 {{else}}
 
-  <div class="title-div">
+  <div class="title title-old-main">
     <h2 class='old-title'>SORRY, YOU'RE TOO OLD FOR THIS SERVICE</h2>
     <p class='old-title-p'>
       You must be 17 or younger.
@@ -67,8 +67,21 @@
         <h3>What can I do now?</h3>
         <i class="identity small material-icons">perm_identity</i>
         <p>
-          Unfortunately IWF are not legally able to remove the online content if the person is over 18. There are other options though:
+          Unfortunately we are not legally able to remove the online content if you are over 17. There are other options though:
         </p>
+        <div class='other-options'>
+          <a class='contact' href='https://www.ceop.police.uk/CEOP-Reporting/'>Contact CEOP
+            <i class="identity small material-icons">contacts</i>
+          </a>
+          <a class='contact' href='http://www.themix.org.uk/'>
+            <i class="identity small material-icons">contacts</i>
+            Contact The Mix
+          </a>
+          <a class='contact' href='http://www.samaritans.org/'>
+            <i class="identity small material-icons">contacts</i>
+            Contact Samaritans
+          </a>
+        </div>
     </div>
   </div>
 
