--- a/public/css/form.css
+++ b/public/css/form.css
@@ -11,13 +11,11 @@
   margin:0;
 }
 
-.title-div{
+.content-title{
   background-color: #632c7a;
-  color:white;
-  font-family: 'childline-bold';
-  text-align: center;
   padding: 4rem 1rem 2.5rem 1rem;
 }
+
 .message{
   margin:1rem;
   padding:0.75rem;
@@ -74,7 +72,7 @@ label{
   display: inline-block!important;
   white-space: normal;
   word-wrap: break-word !important;
-  color: black !important;
+  color: rgba(35, 79, 98, 1)!important;
 }
 
 label:after {
@@ -99,9 +97,15 @@ form >p{
 }
 
 .confirm {
+
   background-color: #632c7a;
   display: block;
   margin: 0 auto;
+  margin-top: 1rem;
+}
+
+.confirm:hover {
+  background-color: #2F153A;
 }
 
 .input-field{
@@ -114,9 +118,7 @@ form >p{
 .report-submit{
   margin-top:1.5rem;
 }
-p{
-  font-size: 1.5rem;
-}
+
 
 #description{
   min-height: 6rem;
@@ -125,17 +127,25 @@ p{
 
 /*OLD styling*/
 
+.title-old-main {
+  background-color: #3EBB98;
+  padding: 4rem 1rem 2.5rem 1rem;
+  margin: 0;
+}
+
 .background-pink {
-  background-color: #fbdedd;
+  background-color: #D8F1EA;
   padding: 1rem;
 }
 .old-title {
   font-family: 'Rosie';
   color:white;
+  margin: 0;
 }
 
 .old-title-p {
   color: white;
+  font-family: 'childline-bold';
   font-size: 1.3rem;
 }
 
@@ -153,7 +163,7 @@ p{
   margin: 0;
   width: 90%;
   float:left;
-  color: #ED5753
+  color:  #63297A;
 }
 
 .old-info p {
@@ -161,11 +171,43 @@ p{
   margin: 0;
   margin-bottom: 1rem;
   font-size: 1.2rem;
-  color: #ED5753;
+  color: #63297A;
 }
 
 .identity {
   width: 10%;
   text-align: right;
-  color: #ED5753;
+  color: #63297A;
+}
+
+
+.other-options {
+  position: relative;
+  margin: 0 auto;
+  background-color: white;
+  padding: 0;
+}
+
+.contact {
+  float:left;
+  text-align: center;
+  display: block;
+  color: #63297A;
+  border: 0.2rem solid #3EBB98;
+  padding: 0.5rem;
+  height: 7rem;
+  width: 33%;
+  margin: 1rem;
+  transition: all 0.5s ease;
+  font-family: 'childline-bold';
+}
+
+.other-options a:hover {
+  color: #2F153A;
+  text-decoration: underline;
+}
+
+.contact i {
+  position:absolute;
+  bottom: 0;
 }
