--- a/public/css/landing.css
+++ b/public/css/landing.css
@@ -68,7 +68,9 @@ body {
 }
 
 .landing-sexting {
-  width:100%;
+  display: block;
+  margin: 0 auto;
+  width:93%;
   z-index: -1;
   opacity: 0.6;
   height: 25vh;
