#45 changes to page 5

--- a/views/age-check.html
+++ b/views/age-check.html
@@ -1,6 +1,6 @@
 <!-- <div class='age'> -->
   <div class="age-title">
-    <h1 class='title'>ARE YOU UNDER 18</h1>
+    <h1 class='title'>ARE YOU UNDER 18?</h1>
   </div>
 
   <div class="progress">
