--- a/public/css/age.css
+++ b/public/css/age.css
@@ -31,6 +31,7 @@ $color8: #CCECF5;*/
   background-color: rgba(0, 161, 208, 1);
   padding: 4rem 1rem 2.5rem 1rem;
   text-align: center;
+  height: 25vh;
 }
 
 .qr-container {
