--- a/public/css/age.css
+++ b/public/css/age.css
@@ -66,7 +66,7 @@ $color8: #CCECF5;*/
 }
 
 .age-info {
-  background-color: rgba(235, 88, 87, 1);
+  background-color: #F28C00;
   display: flex;
   flex-direction: row;
   color: white;
