--- a/views/content-form.html
+++ b/views/content-form.html
@@ -67,20 +67,29 @@
         <h3>What can I do now?</h3>
         <i class="identity small material-icons">perm_identity</i>
         <p>
-          Unfortunately we are not legally able to remove the online content if you are over 17. There are other options though:
+          Unfortunately we are not legally able to remove the online content if you are over 18. There are other options though:
         </p>
         <div class='other-options'>
-          <a class='contact' href='https://www.ceop.police.uk/CEOP-Reporting/'>Contact CEOP
+          <div class="option1">
             <i class="identity small material-icons">contacts</i>
-          </a>
-          <a class='contact' href='http://www.themix.org.uk/'>
+            <a class='contact' href='https://www.ceop.police.uk/CEOP-Reporting/'>Contact CEOP
+            </a>
+            <div class="spacer" style="clear: both;"></div>
+          </div>
+          <div class="option2">
             <i class="identity small material-icons">contacts</i>
-            Contact The Mix
-          </a>
+              <a class='contact' href='http://www.themix.org.uk/'>
+              Contact The Mix
+           </a>
+          <div class="spacer" style="clear: both;"></div>
+        </div>
+        <div class="option3">
+          <i class="identity small material-icons">contacts</i>
           <a class='contact' href='http://www.samaritans.org/'>
-            <i class="identity small material-icons">contacts</i>
             Contact Samaritans
           </a>
+          <div class="spacer" style="clear: both;"></div>
+        </div>
         </div>
     </div>
   </div>
