--- a/views/content-form.html
+++ b/views/content-form.html
@@ -69,7 +69,7 @@
         <p>
           Unfortunately we are not legally able to remove the online content if you are over 17. There are other options though:
         </p>
-        <div class='other-options'>
+        <div class='other-opts'>
           <a class='contact' href='https://www.ceop.police.uk/CEOP-Reporting/'>Contact CEOP
             <i class="identity small material-icons">contacts</i>
           </a>
