--- a/views/content-form.html
+++ b/views/content-form.html
@@ -62,7 +62,6 @@
     </p>
   </div>
 
-  <div class='background-pink'>
     <div class='old-info'>
         <h3>What can I do now?</h3>
         <i class="identity small material-icons">perm_identity</i>
@@ -71,13 +70,15 @@
         </p>
 
         <div class='other-ops'>
-          <a class='contact' href='https://www.ceop.police.uk/CEOP-Reporting/'>Contact CEOP
+          <div class='option1'>
             <i class="identity small material-icons">contacts</i>
-            <a class='contact' href='https://www.ceop.police.uk/CEOP-Reporting/'>Contact CEOP
+            <a class='contact' href='https://www.ceop.police.uk/CEOP-Reporting/'>
+              Contact CEOP
             </a>
             <div class="spacer" style="clear: both;"></div>
           </div>
-          <div class="option2">
+
+        <div class="option2">
             <i class="identity small material-icons">contacts</i>
               <a class='contact' href='http://www.themix.org.uk/'>
               Contact The Mix
@@ -90,7 +91,6 @@
             Contact Samaritans
           </a>
           <div class="spacer" style="clear: both;"></div>
-        </div>
         </div>
     </div>
   </div>
