mobile only for development

--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,4 +1,4 @@
-@media (min-width: 680px) {
+/*@media (min-width: 680px) {
   .landing-info {
     max-width: 500px;
     margin: 1rem auto;
@@ -24,4 +24,4 @@
     float: left;
     width: 50%;
   }
-}
+}*/
