--- a/public/css/modal.css
+++ b/public/css/modal.css
@@ -3,9 +3,8 @@
 
 .mod {
   display: block;
-  width: 80vw;
-  max-width: 400px;
-  height: 70vh;
+  width: 25rem;
+  height: 40rem;
   position: fixed;
   z-index: 100;
   left: 50%;
@@ -25,8 +24,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 90%;
+  height: 90%;
   z-index: 50;
   background: rgba(0, 0, 0, 0.6);
 }
