--- a/public/css/age.css
+++ b/public/css/age.css
@@ -34,6 +34,24 @@ rgba(235, 88, 87, 1);
   height: 28vh;
 }
 
+.yoti-intro {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.yoti-intro h3 {
+  height: 10rem;
+  width: 80%;
+  margin: 0;
+  height: 4rem;
+}
+
+.yoti-intro img {
+  width: 15%;
+  height: 2rem;
+}
+
 #inline-qr-div {
   position: absolute;;
   margin-top: -8.5rem;
@@ -51,6 +69,7 @@ rgba(235, 88, 87, 1);
   display: block;
   margin: 0 auto;
   width: 100%;
+
   text-align: center;
   z-index: -1;
   margin-bottom: 1rem;
@@ -58,9 +77,16 @@ rgba(235, 88, 87, 1);
 
 .yoti-btn a {
   display: block;
+  background-color: #632c7a;
+  width: 20rem;
   margin: 0 auto;
   padding-left: 2rem;
   padding-right:2rem;
+  text-transform: none;
+}
+
+.yoti-btn a:hover {
+  background-color: #2F153A;
 }
 
 .age-info {
